--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 							<li>
 								<a href="/" class="icon solid fa-angle-down">LEEDXS Exchange</a>
 								<ul>
-									<li><a href="/">Bursa LEEDXS</a></li>
+									<li><a href="https://leedxs.github.io/leedxs.html">Bursa LEEDXS</a></li>
 									<li><a href="/">LEEDXS bertukar keamanan dan strategi anti-penipuan</a></li>
 									<li><a href="/">Bagaimana LEEDXS melindungi terhadap penipuan mata uang kripto</a></li>
 								
@@ -90,7 +90,7 @@
 								<h3>LEEDXS Exchange Safety Advice: Safeguarding Yourself Against Impersonation Scams</h3>
 								<p>LEEDXS Exchange Security Guide: Identifying Common Scams and Protecting Yourself from Impersonation Scam.</p>
 								<ul class="actions special">
-									<li><a href="/" class="button alt">Learn More</a></li>
+									<li><a href="https://leedxs.github.io/leedxs.html" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 
@@ -102,7 +102,7 @@
 								<h3>LEEDXS Exchange Anti-Scam Guidelines: Avoiding Scams from Strangers on Social Media</h3>
 								<p>LEEDXS Exchange: Identifying Scamming Profiles and Their Traps.</p>
 								<ul class="actions special">
-									<li><a href="/" class="button alt">Learn More</a></li>
+									<li><a href="https://leedxs.github.io/leedxs2024-9-26.html" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 
@@ -114,7 +114,7 @@
 								<h3>LEEDXS Exchange Security Guide: Preventing Trading Account Hijacking Scams</h3>
 								<p>LEEDXS Exchange: Identifying and Preventing Crypto Account Hijacking Scams to Ensure Fund Safety.</p>
 								<ul class="actions special">
-									<li><a href="/" class="button alt">Learn More</a></li>
+									<li><a href="https://leedxs.github.io/leedxs2024-10-11.html" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 
@@ -126,7 +126,7 @@
 								<h3>LEEDXS Anti-Scam Guide: The First Line of Defense for Protecting Digital Assets</h3>
 								<p>New Heights in Scam Prevention: LEEDXS Exchange Enhances User Security Assurance.</p>
 								<ul class="actions special">
-									<li><a href="/" class="button alt">Learn More</a></li>
+									<li><a href="https://leedxs.github.io/leedxs2024-10-17.html" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 							</div>
@@ -137,7 +137,7 @@
 								<h3>Strategi Pencegahan Penipuan LEEDXS: Membangun Lingkungan Perdagangan yang Aman bagi Pengguna</h3>
 								<p>Pengetahuan Anti-Scam Bursa LEEDXS: Mengenali dan Mencegah Penipuan Pembajakan Akun</p>
 								<ul class="actions special">
-									<li><a href="/" class="button alt">Learn More</a></li>
+									<li><a href="https://leedxs.github.io/leedxs2024-10-18.html" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 
